# wmm-model-checker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  Tools.md  main.cpp
.github/workflows/: build-format-test.yml
build-utils/: build_debug.sh  build_release.sh
examples/: dekkers_lock.txt  message_passing.txt  par_inc.txt  pso.txt  rel_sequence.txt  run_all_combinations.py  sc_fence.txt  tso.txt  visibility.txt  ww_reorder.txt
include/: code.h  defs.h  errors.h  interactive_chooser.h  memory_system.h  parser.h  path_chooser.h  program.h  thread.h  tokenizer.h  tokens.h
include/CLI11/: CLI11.hpp
include/mem_models/: memory_system.h  pso.h  seq_cst.h  tso.h
include/mem_systems/: memory.h  memory_view.h  pso.h  seq_cst.h  sra.h  tso.h
include/memory_system/: memory.h  memory_view.h
include/memory_system/models/: array_memory.h  message_memory.h  pso.h  ra.h  seq_cst.h  sra.h  tso.h
include/path_choosers/: full.h  interactive.h  path_chooser.h  random.h
src/: code.cpp  defs.cpp  parser.cpp  program.cpp  thread.cpp  tokenizer.cpp
tests/: CMakeLists.txt
tests/modelchecker/: test.cpp
tests/parser/: test.cpp
tests/pso/: CMakeLists.txt  pso_test.cpp  test.cpp  test_pso.cpp
tests/pso/programs/: fifo.txt  load_store.txt
tests/release_acquire/: test.cpp
tests/sc/: test.cpp
tests/tokenizer/: test.cpp
tests/tso/: test.cpp
tests/tso/programs/: fifo.txt  load_store.txt  rel_acq.txt
